@@ -572,7 +572,12 @@ cd_cache_free (CdCache *cache)
     conn = libhal_ctx_get_dbus_connection (cache->ctx);
     libhal_ctx_shutdown (cache->ctx, NULL);
     libhal_ctx_free(cache->ctx);
+#if (DBUS_VERSION_MAJOR == 0) && (DBUS_VERSION_MINOR < 60)
     dbus_connection_unref (conn);
+#else
+    dbus_connection_close (conn);
+    dbus_connection_unref (conn);
+#endif
 
     g_free (cache->disc_udi);
 #elif HAVE_HAL_0_2
