@@ -1,3 +1,8 @@
+2006-10-27  Bastien Nocera  <hadess@hadess.net>
+
+	* src/plparse/totem-disc.c: (cd_cache_free): close the dbus connection
+	before unref'ing it when we have a private connection (Closes: #365265)
+
 2006-10-26  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* src/backend/bacon-video-widget-gst-0.10.c:
